# naive-rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rag.ipynb  rag.py
.github/: cicd.semgrep-reusable.yml  trufflehog.yml
.github/policies/: vet-policy.yml
.github/workflows/: vet-sca-reusable.yml
docs/: api.md  architecture.md  chunking.md  rag-concepts.md  setup.md  turboquant.md
public/: app.js  index.html  style.css
skills/changelog/: SKILL.md
skills/changelog/scripts/: changelog.py
skills/feature-spec/: SKILL.md
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-04-21-agents/: plan.md  requirements.md  security.md  validation.md
specs/2026-04-21-reranking/: plan.md  requirements.md  security.md  validation.md
src/: backend.py  chunker.py  db.py  embeddings.py  main.py  parsers.py  rag.py  reranker.py  turboquant.py
src/routes/: documents.py  query.py  upload.py
